--- a/index.html
+++ b/index.html
@@ -844,9 +844,9 @@
                                           class="body-whatsapp"
                                         />
                                       </div>
-                                      <div class="body-tik-tok">
-                                      <div class="body-svg-22">
-                                      <img src="assets/tik-tok.png" loading="lazy" alt="Tik-Tok logo" />
+                                      <div>
+                                      <div>
+                                      <img src="assets/tik-tok.png" loading="lazy" alt="Tiktok"/>
                                       </div>
                                       </div>
                                     </div>
