barra de pesquisa

--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
                       ></object>
                     </div>
                     <div class="body-entrar-ou-criar-conta">
-                      <span
-                        ><span>&nbsp;&nbsp;</span>Entrar <span>ou </span>Criar
-                        Conta</span
-                      >
+                      <span><span>&nbsp;&nbsp;</span>Criar conta ou Entrar</span>
                     </div>
                   </div>
                 </div>
@@ -48,7 +45,7 @@
                           <div class="body-div-col-sm-2">
                             <div class="body-input-form-control">
                               <div class="body-procurar-na-loja">
-                                Procurar na loja
+                                Procurar ...
                               </div>
                             </div>
                           </div>
@@ -808,7 +805,7 @@
                                     ></object>
                                   </div>
                                   <div class="body-certificada">
-                                    &nbsp;&nbsp;&nbsp;&nbsp;Certificada
+                                    Certificada
                                   </div>
                                 </div>
                               </div>
