--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="pt_br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -345,7 +345,7 @@
                           <div class="body-div-container-3">
                             <div class="body-th">
                               <div class="body-h-1">
-                                <div class="body-promo-es">PROMOÇÕES</div>
+                                <div class="body-promo-es">PROMOÇÃO</div>
                                 <div class="body-div-1">
                                   <div class="body-mai-s1">MAIS</div>
                                 </div>
@@ -543,7 +543,7 @@
                                 <div class="body-mai-s2">MAIS</div>
                               </div>
                               <div class="body-est-ochegando">
-                                Estão chegando
+                                ESTÃO CHEGANDO
                               </div>
                             </div>
                           </div>
@@ -719,7 +719,7 @@
                     <div class="body-obrigado-pela-visita">
                       Obrigado pela visita!
                     </div>
-                    <div class="body-lan-amentos-1"><p>Lançamentos</p></div>
+                    <div class="body-lan-amentos-1"><p>LANÇAMENTOS</p></div>
                   </div>
                 </div>
                 <div class="body-t-div-newsletter-wrapper">
