tela home terminada falta botões clicáveis

--- a/index.html
+++ b/index.html
@@ -96,24 +96,16 @@
             </div>            
               <div class="body-t-nav-barra-navigation">
                 <div class="body-nav-barra-navigation">
-                  <div class="body-link">
-                    <div class="body-todos">Todos</div>
-                  </div>
                   <div class="body-t-list-loja-navigation">
                     <div class="body-list-loja-navigation"></div>
                   </div>
                   <div class="body-t-link-link-link">
                     <div class="body-link-1">
-                      <div class="body-lan-amentos">Lançamentos</div>
-                    </div>
-                    <div class="body-link-2">
-                      <div class="body-pr-vendas">Pré-Vendas</div>
+                      <div class="body-lan-amentos">HQs</div>
                     </div>
                     <div class="body-link-3">
                       <div class="body-mang-s">Mangás</div>
                     </div>
-                  </div>
-                  <div class="body-t-link-tlink-link-tlink-tlink-tlink-link">
                     <div class="body-link-4">
                       <div class="body-quadrinhos">Quadrinhos</div>
                     </div>
