links para cadastro e login

--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
                         class="body-svg"
                       ></object>
                     </div>
-                    <div class="body-entrar-ou-criar-conta">
-                      <span><span>&nbsp;&nbsp;</span>Criar conta ou Entrar</span>
-                    </div>
+                    <a class="body-entrar-ou-criar-conta" href="cadastro.html" target="_blank">
+                      <span><span>&nbsp;&nbsp;</span>Criar conta</span>
+                  </a> 
+                  <span> ou </span>
+                  <a class="body-entrar-ou-criar-conta" href="login.html" target="_blank">
+                      Entrar
+                  </a>                  
                   </div>
                 </div>
               </div>
