--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@500"
     />
     <title>ComicBook Store</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="stylesheet" type="text/css" href="style2.css" />
+    <link rel="stylesheet" type="text/css" href="style_index.css" />
+    <link rel="stylesheet" type="text/css" href="style2_index.css" />
   </head>
   <!-- remove margem -->
   <body style="margin: 0px">
