--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- remove margem -->
   <body style="margin: 0px">
 
-    <div id="app">
+    <div id="i">
       <div class="body-wrapper">
         <div class="body-body">
           <div class="body-div-wholepage">
@@ -87,11 +87,13 @@
                   </div>
                   
                 </div>
+                <a href="index.html">
                 <img
                       src="assets/logo.jpg"
                       loading="lazy"
                       class="body-logo-da-loja"
                     />
+                  </a>
                   </div>
                 </div>
 
@@ -105,13 +107,13 @@
                   </div>
                   <div class="body-t-link-link-link">
                     <div class="body-link-1">
-                      <div class="body-lan-amentos">HQs</div>
+                      <div class="body-lan-amentos">Todos</div>
                     </div>
                     <div class="body-link-3">
-                      <div class="body-mang-s">Mangás</div>
+                      <div class="body-mang-s">Quadrinhos</div>
                     </div>
                     <div class="body-link-4">
-                      <div class="body-quadrinhos">Quadrinhos</div>
+                      <div class="body-quadrinhos">Mangás</div>
                     </div>
                     <div class="body-t-link">
                       <div class="body-link-5">
