--- a/login.html
+++ b/login.html
@@ -149,7 +149,7 @@
                           <div class="body-fieldset-fieldset-1">
                             <div class="body-legend-legend-1">
                               <div class="body-informa-es-de-acesso">
-                                Para acesso do site
+                                Para acesso do Site
                               </div>
                             </div>
                             <div class="body-div-field-6">
