primeiro script foi o botão enviar com a biblioteca SweetAlert2

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>ComicBook Store</title>
     <link rel="stylesheet" type="text/css" href="style_index.css" />
     <link rel="stylesheet" type="text/css" href="style2_index.css" />
+    
   </head>
   <!-- remove margem -->
   <body style="margin: 0px">
@@ -160,23 +161,34 @@
                               <div class="body-div-owl-wrapper">
                                 <div class="body-t-div-slide-div-slide-div-slide-div-slide-div-slide" >
                                   <div class="body-div-slide">
+                                    <a href="https://www.marvel.com/comics" target="blank">
                                     <div class="body-image-1"></div>
+                                    </a>
                                   </div>
                                   <div class="body-div-slide-1">
+                                    <a href="https://www.dc.com/comics" target="blank">
                                     <img
                                       src="assets/image-2.png"
                                       loading="lazy"
                                       class="body-image-2"
                                     />
+                                    </a>
                                   </div>
+                                </a>
                                   <div class="body-div-slide-2">
+                                    <a href="https://www.darkhorse.com/" target="blank">
                                     <div class="body-image-3"></div>
+                                    </a>
                                   </div>
                                   <div class="body-div-slide-3">
+                                    <a href="https://imagecomics.com/" target="blank">
                                     <div class="body-image-4"></div>
+                                  </a>
                                   </div>
                                   <div class="body-div-slide-4">
+                                    <a href="https://valiantentertainment.com/" target="blank">
                                     <div class="body-image-5"></div>
+                                  </a>
                                   </div>
                                 </div>
                               </div>
@@ -730,13 +742,12 @@
                         </div>
                       </div>
                     </div>
-                    <div class="body-t-hqs-ecolecion-veis-desde">
-                      <div class="body-h-qs-ecolecion-veis-desde">
-                        HQs e colecionáveis desde 2000.
-                      </div>
-                    </div>
+                    <div class="body-t-hqs-ecolecion-veis-desde"></div>
                     <div class="body-obrigado-pela-visita">
                       Obrigado pela visita!
+                    </div>
+                    <div class="body-h-qs-ecolecion-veis-desde" style="position: relative; right: 11px;">
+                      HQs e colecionáveis desde 2000.
                     </div>
                     <div class="body-lan-amentos-1"><p>LANÇAMENTOS</p></div>
                   </div>
@@ -783,7 +794,9 @@
                                 </div>
                               </div>
                               <div class="body-button-button">
-                                <button class="body-enviar">Enviar</button>
+                                <button class="body-enviar" style="position: relative; left: 4.5px;">
+                                  Enviar
+                                </button>
                               </div>
                             </div>
                           </div>
@@ -825,9 +838,11 @@
                                       class="body-svg-19"
                                     ></object>
                                   </div>
+                                  <a href="https://www.siteconfiavel.com.br/" target="_blank">
                                   <div class="body-certificada">
                                     Certificada
                                   </div>
+                                </a>
                                 </div>
                               </div>
                               <div class="body-t-div-col-sm-2">
@@ -942,5 +957,7 @@
         </div>
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
