contador de compras pelos botoes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                           class="body-svg-1"
                         ></object>
                       </div>
-                      <div class="body-t-carrinho">
+                      <div class="body-t-carrinho" style="width: auto; padding-left: 2px;">
                         <div class="body-carrinho">&nbsp;&nbsp;Carrinho</div>
                       </div>
                     </div>
@@ -228,9 +228,14 @@
                                                 class="body-svg-2"
                                               ></object>
                                             </div>
-                                            <div class="body-adicionar">
+                                            <button class="body-adicionar">
                                               &nbsp;Adicionar
-                                            </div>
+                                              <div class="botao-animado">
+                                                <div class="conteudo">
+                                                  <h2>Botão animado funcionando</h2>
+                                                </div>
+                                              </div>
+                                            </button>
                                           </div>
                                           <div class="body-jerusal-malan-moore">
                                             Jerusalém - Alan Moore
@@ -258,9 +263,9 @@
                                                     class="body-svg-3"
                                                   ></object>
                                                 </div>
-                                                <div class="body-adicionar-1">
+                                                <button class="body-adicionar-1">
                                                   &nbsp;Adicionar
-                                                </div>
+                                                </button>
                                               </div>
                                             </div>
                                           </div>
@@ -284,9 +289,9 @@
                                                     class="body-svg-4"
                                                   ></object>
                                                 </div>
-                                                <div class="body-adicionar-2">
+                                                <button class="body-adicionar-2">
                                                   &nbsp;Adicionar
-                                                </div>
+                                                </button>
                                               </div>
                                             </div>
                                           </div>
@@ -313,9 +318,9 @@
                                                     class="body-svg-5"
                                                   ></object>
                                                 </div>
-                                                <div class="body-adicionar-3">
+                                                <button class="body-adicionar-3">
                                                   &nbsp;Adicionar
-                                                </div>
+                                                </button>
                                               </div>
                                             </div>
                                           </div>
@@ -341,9 +346,9 @@
                                                 class="body-svg-6"
                                               ></object>
                                             </div>
-                                            <div class="body-adicionar-4">
+                                            <button class="body-adicionar-4">
                                               &nbsp;Adicionar
-                                            </div>
+                                            </button>
                                           </div>
                                         </div>
                                       </div>
@@ -404,9 +409,9 @@
                                         </div>
                                         <div class="body-link-add-to-basket-button-listing-5" >
                                           <div class="body-t-svg-adicionar">
-                                            <div class="body-adicionar-5">
+                                            <button class="body-adicionar-5">
                                               Adicionar
-                                            </div>
+                                            </button>
                                             <object
                                               data="assets/Svg3.svg"
                                               class="body-svg-7"
@@ -432,9 +437,9 @@
                                         </div>
                                         <div class="body-t-svg-link-add-to-basket-button-listing" >
                                           <div class="body-link-add-to-basket-button-listing-6" >
-                                            <div class="body-adicionar-6">
+                                            <button class="body-adicionar-6">
                                               Adicionar
-                                            </div>
+                                            </button>
                                           </div>
                                           <object
                                             data="assets/Svg3.svg"
@@ -473,9 +478,9 @@
                                         </div>
                                         <div class="body-t-svg-link-add-to-basket-button-listing-1" >
                                           <div class="body-link-add-to-basket-button-listing-7" >
-                                            <div class="body-adicionar-7">
+                                            <button class="body-adicionar-7">
                                               Adicionar
-                                            </div>
+                                            </button>
                                           </div>
                                           <object
                                             data="assets/Svg3.svg"
@@ -509,9 +514,9 @@
                                         <div class="body-t-link-add-to-basket-button-listing-3" >
                                           <div class="body-link-add-to-basket-button-listing-8" >
                                             <div class="body-t-svg-adicionar-1">
-                                              <div class="body-adicionar-8">
+                                              <button class="body-adicionar-8">
                                                 Adicionar
-                                              </div>
+                                              </button>
                                               <object
                                                 data="assets/Svg3.svg"
                                                 class="body-svg-10"
@@ -546,9 +551,9 @@
                                           <div class="body-t-link-add-to-basket-button-listing-4" >
                                             <div class="body-link-add-to-basket-button-listing-9" >
                                               <div class="body-t-svg-adicionar-2" >
-                                                <div class="body-adicionar-9">
+                                                <button class="body-adicionar-9">
                                                   Adicionar
-                                                </div>
+                                                </button>
                                                 <object
                                                   data="assets/Svg3.svg"
                                                   class="body-svg-11"
@@ -607,9 +612,9 @@
                                                 class="body-svg-12"
                                               ></object>
                                             </div>
-                                            <div class="body-pr-venda">
+                                            <button class="body-pr-venda">
                                               &nbsp;PRÉ-VENDA
-                                            </div>
+                                            </button>
                                           </div>
                                         </div>
                                       </div>
@@ -642,9 +647,9 @@
                                               class="body-svg-13"
                                             ></object>
                                           </div>
-                                          <div class="body-pr-venda-1">
+                                          <button class="body-pr-venda-1">
                                             PRÉ-VENDA
-                                          </div>
+                                          </button>
                                         </div>
                                       </div>
                                     </div>
@@ -672,9 +677,9 @@
                                                 class="body-svg-14"
                                               ></object>
                                             </div>
-                                            <div class="body-pr-venda-2">
+                                            <button class="body-pr-venda-2">
                                               PRÉ-VENDA
-                                            </div>
+                                            </button>
                                           </div>
                                         </div>
                                       </div>
@@ -701,9 +706,9 @@
                                                 class="body-svg-15"
                                               ></object>
                                             </div>
-                                            <div class="body-pr-venda-3">
+                                            <button class="body-pr-venda-3">
                                               PRÉ-VENDA
-                                            </div>
+                                            </button>
                                           </div>
                                         </div>
                                       </div>
@@ -727,9 +732,9 @@
                                                 class="body-svg-16"
                                               ></object>
                                             </div>
-                                            <div class="body-pr-venda-4">
+                                            <button class="body-pr-venda-4">
                                               PRÉ-VENDA
-                                            </div>
+                                            </button>
                                           </div>
                                         </div>
                                       </div>
@@ -904,29 +909,40 @@
                               <div class="body-div-col-sm-5"></div>
                               <div class="body-t-svg-15">
                                 <div class="body-svg-25">
+                                  <a href="https://www.bcb.gov.br/meubc/faqs/p/o-que-e-boleto" target="_blank">
                                   <div class="body-boleto"></div>
+                                  </a>
                                 </div>
                               </div>
                               <div class="body-t-svg-16">
                                 <div class="body-svg-26">
                                   <div class="body-t-pix">
+                                    <a href="https://www.bcb.gov.br/estabilidadefinanceira/pix" target="_blank">
                                     <div class="body-pix"></div>
+                                  </a>
                                   </div>
                                 </div>
                               </div>
                               <div class="body-t-svg-17">
                                 <div class="body-svg-27">
+                                  <a href="https://www.elo.com.br/" target="_blank">
                                   <div class="body-elo"></div>
+                                </a>
+                                  
                                 </div>
                               </div>
                               <div class="body-t-svg-18">
                                 <div class="body-svg-28">
+                                  <a href="https://www.mastercard.com.br/pt-br.html" target="_blank">
                                   <div class="body-master-card"></div>
+                                  </a>
                                 </div>
                               </div>
                               <div class="body-t-svg-19">
                                 <div class="body-svg-29">
+                                  <a href="https://www.visa.com.br/" target="_blank">
                                   <div class="body-visa"></div>
+                                </a>
                                 </div>
                               </div>
                             </div>
@@ -958,6 +974,7 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="atualizacoesemail.js"></script>
+    <script src="carrinhodecompras.js"></script>
   </body>
 </html>
