--- a/index.html
+++ b/index.html
@@ -1082,6 +1082,6 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="atualizacoesemail.js"></script>
-    <script src="carrinhodecompras.js"></script>
+    <script src="contadorcarrinho.js"></script>
   </body>
 </html>
