--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>ComicBook Store</title>
     <link rel="stylesheet" type="text/css" href="style_index.css" />
     <link rel="stylesheet" type="text/css" href="style2_index.css" />
+    <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
     
   </head>
   <!-- remove margem -->
@@ -53,7 +54,7 @@
                         ></object>
                       </div>
                       <div class="body-t-carrinho" style="width: auto; padding-left: 2px;">
-                        <div class="body-carrinho">&nbsp;&nbsp;Carrinho</div>
+                        <button onClick="resumoCompra()" id="carrinho" class="body-carrinho">&nbsp;&nbsp;Carrinho</button>
                       </div>
                     </div>
                   </div>
@@ -426,7 +427,7 @@
                                     <div class="body-div-product-carousel-item-5" >
                                       <div class="body-image-image-thumb-5" ></div>
                                       <div class="body-div-caption-5">
-                                        <div class="body-new-teen-titans-omnibus-vol" >
+                                        <div id="descricao" class="body-new-teen-titans-omnibus-vol" >
                                           New Teen Titans Omnibus - Vol 1
                                         </div>
                                         <div class="body-paragraph">
@@ -435,7 +436,7 @@
                                               <div class="body-r-5">
                                                 R$300,00
                                               </div>
-                                              <div>R$180,00</div>
+                                              <div id="valor">R$180,00</div>
                                             </div>
                                           </div>
                                         </div>
@@ -1083,5 +1084,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="atualizacoesemail.js"></script>
     <script src="contadorcarrinho.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
