ajeitando para mais elementos

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                                             class="body-image-image-thumb"
                                           />
                                         </div>
-                                        <div class="body-div-caption">
+                                        <div data-valor="nome-1"class="body-div-caption">
                                           <div class="body-r">R$297,50</div>
                                           <div class="body-link-add-to-basket-button-listing" >
                                             <div class="body-t-svg-2">
@@ -230,7 +230,7 @@
                                                 class="body-svg-2"
                                               ></object>
                                             </div>
-                                            <button class="body-adicionar" data-popup="popup-1">&nbsp;Adicionar</button>
+                                            <button data-produto="produto-1" class="body-adicionar" data-popup="popup-1">&nbsp;Adicionar</button>
                                             <div class="popup-wrapper" id="popup-1">
                                               <div class="popup">
                                               <div class="popup-close">x</div>
@@ -242,7 +242,7 @@
                                             </div>
 
                                           </div>
-                                          <div class="body-jerusal-malan-moore">
+                                          <div data-nome="nome-1" class="body-jerusal-malan-moore">
                                             Jerusalém - Alan Moore
                                           </div>
                                         </div>
@@ -337,7 +337,7 @@
                                                     class="body-svg-5"
                                                   ></object>
                                                 </div>
-                                                <button class="body-adicionar" data-popup="popup-4">&nbsp;Adicionar</button>
+                                                <button id="adicionarProdutoBtn" class="body-adicionar" data-popup="popup-4">&nbsp;Adicionar</button>
                                                 <div class="popup-wrapper" id="popup-4">
                                                   <div class="popup">
                                                   <div class="popup-close">x</div>
@@ -372,7 +372,7 @@
                                                 class="body-svg-6"
                                               ></object>
                                             </div>
-                                            <button class="body-adicionar" data-popup="popup-5">&nbsp;Adicionar</button>
+                                            <button id="adicionarProdutoBtn" class="body-adicionar" data-popup="popup-5">&nbsp;Adicionar</button>
                                                 <div class="popup-wrapper" id="popup-5">
                                                   <div class="popup">
                                                   <div class="popup-close">x</div>
@@ -427,7 +427,7 @@
                                     <div class="body-div-product-carousel-item-5" >
                                       <div class="body-image-image-thumb-5" ></div>
                                       <div class="body-div-caption-5">
-                                        <div id="descricao" class="body-new-teen-titans-omnibus-vol" >
+                                        <div class="body-new-teen-titans-omnibus-vol" >
                                           New Teen Titans Omnibus - Vol 1
                                         </div>
                                         <div class="body-paragraph">
@@ -436,7 +436,7 @@
                                               <div class="body-r-5">
                                                 R$300,00
                                               </div>
-                                              <div id="valor">R$180,00</div>
+                                              <div>R$180,00</div>
                                             </div>
                                           </div>
                                         </div>
