--- a/index.html
+++ b/index.html
@@ -1084,7 +1084,8 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="atualizacoesemail.js"></script>
     <script src="contadorcarrinho.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="adicionarproduto.js"></script>
+    <script type="text/javascript" src="indexresumo.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
