--- a/resumo.html
+++ b/resumo.html
@@ -88,6 +88,6 @@
 
 
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-            <script type="text/javascript" src="js/resumo.js"></script>
+            <script type="text/javascript" src="resumo.js"></script>
             </body>
             </html>
