--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
                                             class="body-image-image-thumb"
                                           />
                                         </div>
-                                        <div data-valor="nome-1"class="body-div-caption">
-                                          <div class="body-r">R$297,50</div>
+                                        <div class="body-div-caption">
+                                          <div data-valor="nome-1" class="body-r">R$297,50</div>
                                           <div class="body-link-add-to-basket-button-listing" >
                                             <div class="body-t-svg-2">
                                               <object
